--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,9 @@
         </div>
       </div>
       <div class="main"></div>
-      <footer></footer>
+      <footer>
+        aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+      </footer>
     </div>
   </body>
 </html>
