--- a/src/index.html
+++ b/src/index.html
@@ -22,13 +22,16 @@
         <ul class="menu">
           <li class="menu_item">
             <button>
+              <img class="menu_item_img" src="./assets/home.svg" alt="home">
               <span>Home</span>
             </button>
           </li>
           <li class="menu_item">
+            <img class="menu_item_img" src="./assets/search.svg" alt="home">
             <button>Search</button>
           </li>
           <li class="menu_item">
+            <img class="menu_item_img" src="./assets/home.svg" alt="home">
             <button>Your Library</button>
           </li>
         </ul>
