falta aumentar a largura da  barra preta

--- a/src/index.html
+++ b/src/index.html
@@ -27,11 +27,11 @@
             </button>
           </li>
           <li class="menu_item">
-            <img class="menu_item_img" src="./assets/search.svg" alt="home">
+            <img class="menu_item_img" src="./assets/search.svg" alt="search">
             <button>Search</button>
           </li>
           <li class="menu_item">
-            <img class="menu_item_img" src="./assets/home.svg" alt="home">
+            <!-- <img class="menu_item_img" src="./assets/library.svg" alt="home"> -->
             <button>Your Library</button>
           </li>
         </ul>
