--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,31 @@
           <button>Liked Songs</button>
         </div>
       </div>
-      <div class="main"></div>
+      <div class="main">
+        <div>
+          <div>
+            <button> 
+              <img src="">
+            </button>
+            <button>
+              <img src="">
+            </button>
+          </div>
+          <div>
+            <ul>
+              <li>
+                <a>Premium</a>
+              </li>
+              <li>
+                <a>Suporte</a>
+              </li>
+              <li>
+                <a>Baixar</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
       <footer></footer>
     </div>
   </body>
