--- a/src/index.html
+++ b/src/index.html
@@ -21,57 +21,82 @@
         </div>
         <ul class="menu">
           <li class="menu_item">
-            <button>
-              <img class="menu_item_img" src="./assets/home.svg" alt="home">
+            <button class="active">
+              <svg class="menu_item_icon active" role="img" viewBox="0 0 24 24">
+                <path
+                  d="M12.5 3.247a1 1 0 00-1 0L4 7.577V20h4.5v-6a1 1 0 011-1h5a1 1 0 011 1v6H20V7.577l-7.5-4.33zm-2-1.732a3 3 0 013 0l7.5 4.33a2 2 0 011 1.732V21a1 1 0 01-1 1h-6.5a1 1 0 01-1-1v-6h-3v6a1 1 0 01-1 1H3a1 1 0 01-1-1V7.577a2 2 0 011-1.732l7.5-4.33z"
+                ></path>
+              </svg>
               <span>Home</span>
             </button>
           </li>
           <li class="menu_item">
-            <img class="menu_item_img" src="./assets/search.svg" alt="search">
-            <button>Search</button>
+            <button>
+              <svg class="menu_item_icon" role="img" viewBox="0 0 24 24">
+                <path
+                  d="M10.533 1.279c-5.18 0-9.407 4.14-9.407 9.279s4.226 9.279 9.407 9.279c2.234 0 4.29-.77 5.907-2.058l4.353 4.353a1 1 0 101.414-1.414l-4.344-4.344a9.157 9.157 0 002.077-5.816c0-5.14-4.226-9.28-9.407-9.28zm-7.407 9.279c0-4.006 3.302-7.28 7.407-7.28s7.407 3.274 7.407 7.28-3.302 7.279-7.407 7.279-7.407-3.273-7.407-7.28z"
+                ></path>
+              </svg>
+              <span>Search</span>
+            </button>
           </li>
           <li class="menu_item">
-            <!-- <img class="menu_item_img" src="./assets/library.svg" alt="home"> -->
-            <button>Your Library</button>
+            <button>
+              <svg class="menu_item_icon" role="img" viewBox="0 0 24 24">
+                <path
+                  d="M14.5 2.134a1 1 0 011 0l6 3.464a1 1 0 01.5.866V21a1 1 0 01-1 1h-6a1 1 0 01-1-1V3a1 1 0 01.5-.866zM16 4.732V20h4V7.041l-4-2.309zM3 22a1 1 0 01-1-1V3a1 1 0 012 0v18a1 1 0 01-1 1zm6 0a1 1 0 01-1-1V3a1 1 0 012 0v18a1 1 0 01-1 1z"
+                ></path>
+              </svg>
+              <span>Your Library</span>
+            </button>
           </li>
         </ul>
-        <div class="actions">
-          <button>Create Playlist</button>
-          <button>Liked Songs</button>
-        </div>
       </div>
-
-      <div class="main">
-        <div>
-          <div>
-            <button> 
-              <img src="">
+      <main class="main">
+        <header class="header">
+          <div class="goto_container">
+            <button class="goto_btn">
+              <svg
+                class="goto_btn__icon"
+                viewBox="0 0 14 23"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M0.542894 11.302C0.138502 11.7064 0.155008 12.3669 0.57909 12.7506L11.274 22.4269C11.7859 22.8901 12.5764 22.8506 13.0395 22.3386C13.5027 21.8267 13.4632 21.0362 12.9513 20.5731L3.42568 11.9547L12.9965 2.38388C13.4847 1.89573 13.4847 1.10427 12.9965 0.616116C12.5083 0.127961 11.7169 0.127961 11.2287 0.616117L0.542894 11.302Z"
+                />
+              </svg>
             </button>
-            <button>
-              <img src="">
+            <button class="goto_btn">
+              <svg
+                class="goto_btn__icon"
+                viewBox="0 0 14 23"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M13.0697 11.302C13.4741 11.7064 13.4576 12.3669 13.0335 12.7506L2.33865 22.4269C1.82673 22.8901 1.03626 22.8506 0.57309 22.3386C0.109921 21.8267 0.149445 21.0362 0.661369 20.5731L10.1869 11.9547L0.616126 2.38388C0.127971 1.89573 0.127971 1.10427 0.616126 0.616116C1.10428 0.127961 1.89574 0.127961 2.38389 0.616117L13.0697 11.302Z"
+                />
+              </svg>
             </button>
           </div>
-          <div>
-            <ul>
-              <li>
-                <a>Premium</a>
-              </li>
-              <li>
-                <a>Suporte</a>
-              </li>
-              <li>
-                <a>Baixar</a>
-              </li>
-            </ul>
+          <div class="header__wrapper">
+            <div class="header__wrapper--link_container">
+              <a href="#">Premium</a>
+              <a href="#">Suporte</a>
+              <a href="#">Baixar</a>
+            </div>
+            <div class="slash"></div>
+            <div>
+              <a href="#">Sign up</a>
+              <a href="#">Log in</a>
+            </div>
           </div>
-        </div>
-      </div>
-      <footer></footer>
-=======
-      <div class="main"></div>
-      <footer>        
-      </footer>
->>>>>>> 3a6c2a05aeb790328208282ef56467cd1c1512e7
+        </header>
+      </main>
+      <footer class="footer"></footer>
     </div>
   </body>
 </html>
