--- a/src/formulario.html
+++ b/src/formulario.html
@@ -32,12 +32,12 @@
         <button type="button" class="mb-2 btn btn-light" id="button">
           CONTINUAR COM O GOOGLE
         </button>
-        <button type="button" class="btn btn-light" id="button">
+        <button type="button" class="mb-2 btn btn-light" id="button">
           CONTINUAR COM UM NÚMERO DE TELEFONE
         </button>
       
         
-        <div class="d-flex">
+        <div class="mb-2 d-flex">
           <div class="linha"></div>
           <span id="ou">ou</span>
           <div class="linha"></div>
