--- a/src/formulario.html
+++ b/src/formulario.html
@@ -55,6 +55,10 @@
           </div>
         </form>
 
+        <div>
+          <a href="#" id="esqueci">Esqueceu sua senha?</a>
+        </div>
+
 
     </div>
 
