--- a/src/index.html
+++ b/src/index.html
@@ -2,62 +2,70 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Spotify</title>
-    <link rel="stylesheet" href="./style.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./style.css" />
+
+    <title>Spotify</title>
   </head>
   <body>
     <div class="wrapper">
       <div class="sidebar">
         <div class="logo">
-          <img src="./assets/Spotify_Logo_RGB_White.png" height="40px" alt="" />
+          <a href="./index.html">
+            <img
+              src="./assets/Spotify_Logo_RGB_White.png"
+              height="40px"
+              alt="Spotify Logo"
+            />
+          </a>
         </div>
         <ul class="menu">
-          <li class="menu_item">
-            <button class="active">
-              <svg class="menu_item_icon active" role="img" viewBox="0 0 24 24">
+          <li>
+            <a href="#" class="menu-link menu-link--active">
+              <svg class="menu-link__icon" role="img" viewBox="0 0 24 24">
                 <path
                   d="M12.5 3.247a1 1 0 00-1 0L4 7.577V20h4.5v-6a1 1 0 011-1h5a1 1 0 011 1v6H20V7.577l-7.5-4.33zm-2-1.732a3 3 0 013 0l7.5 4.33a2 2 0 011 1.732V21a1 1 0 01-1 1h-6.5a1 1 0 01-1-1v-6h-3v6a1 1 0 01-1 1H3a1 1 0 01-1-1V7.577a2 2 0 011-1.732l7.5-4.33z"
                 ></path>
               </svg>
               <span>Home</span>
-            </button>
+            </a>
           </li>
-          <li class="menu_item">
-            <button>
-              <svg class="menu_item_icon" role="img" viewBox="0 0 24 24">
+          <li>
+            <a href="#" class="menu-link">
+              <svg class="menu-link__icon" role="img" viewBox="0 0 24 24">
                 <path
                   d="M10.533 1.279c-5.18 0-9.407 4.14-9.407 9.279s4.226 9.279 9.407 9.279c2.234 0 4.29-.77 5.907-2.058l4.353 4.353a1 1 0 101.414-1.414l-4.344-4.344a9.157 9.157 0 002.077-5.816c0-5.14-4.226-9.28-9.407-9.28zm-7.407 9.279c0-4.006 3.302-7.28 7.407-7.28s7.407 3.274 7.407 7.28-3.302 7.279-7.407 7.279-7.407-3.273-7.407-7.28z"
                 ></path>
               </svg>
               <span>Search</span>
-            </button>
+            </a>
           </li>
-          <li class="menu_item">
-            <button>
-              <svg class="menu_item_icon" role="img" viewBox="0 0 24 24">
+          <li>
+            <a href="#" class="menu-link">
+              <svg class="menu-link__icon" role="img" viewBox="0 0 24 24">
                 <path
                   d="M14.5 2.134a1 1 0 011 0l6 3.464a1 1 0 01.5.866V21a1 1 0 01-1 1h-6a1 1 0 01-1-1V3a1 1 0 01.5-.866zM16 4.732V20h4V7.041l-4-2.309zM3 22a1 1 0 01-1-1V3a1 1 0 012 0v18a1 1 0 01-1 1zm6 0a1 1 0 01-1-1V3a1 1 0 012 0v18a1 1 0 01-1 1z"
                 ></path>
               </svg>
               <span>Your Library</span>
-            </button>
+            </a>
           </li>
         </ul>
       </div>
       <main class="main">
-        <header class="header">
-          <div class="goto_container">
-            <button class="goto_btn">
+        <header class="header-root">
+          <div class="navigation">
+            <button class="navigation-btn">
               <svg
-                class="goto_btn__icon"
+                class="navigation-btn__icon"
                 viewBox="0 0 14 23"
                 xmlns="http://www.w3.org/2000/svg"
               >
@@ -68,9 +76,9 @@
                 />
               </svg>
             </button>
-            <button class="goto_btn">
+            <button class="navigation-btn">
               <svg
-                class="goto_btn__icon"
+                class="navigation-btn__icon"
                 viewBox="0 0 14 23"
                 xmlns="http://www.w3.org/2000/svg"
               >
@@ -82,19 +90,195 @@
               </svg>
             </button>
           </div>
-          <div class="header__wrapper">
-            <div class="header__wrapper--link_container">
-              <a href="#">Premium</a>
-              <a href="#">Suporte</a>
-              <a href="#">Baixar</a>
-            </div>
+          <div class="quick-action-container">
+            <nav class="quick-action-nav">
+              <a href="#" class="quick-action-nav__item">Premium</a>
+              <a href="#" class="quick-action-nav__item">Support</a>
+              <a href="#" class="quick-action-nav__item">Download</a>
+            </nav>
             <div class="slash"></div>
             <div>
-              <a href="#">Sign up</a>
-              <a href="#">Log in</a>
+              <a href="./singup.html" class="primary-link primary-link--blank"
+                >Sign up</a
+              >
+              <a href="#" class="primary-link">Log in</a>
             </div>
           </div>
         </header>
+        <div class="body-root">
+          <section class="playlist-section">
+            <header class="playlist-section__header">
+              <h1 class="title">Spotify Playlists</h1>
+              <a href="#" class="link">See All</a>
+            </header>
+            <div class="playlist-section__body">
+              <a href="#" class="card">
+                <div class="card__body">
+                  <img
+                    src="https://placekitten.com/300/300"
+                    alt="Playlist cover"
+                    class="card__body-cover"
+                  />
+                  <strong class="card__body-name">Today's Top Hits</strong>
+                  <p class="card__body-description">
+                    Steve Lacy is on top of the Hottest 50!
+                  </p>
+                </div>
+              </a>
+              <a href="#" class="card">
+                <div class="card__body">
+                  <img
+                    src="https://placekitten.com/300/300"
+                    alt="Playlist cover"
+                    class="card__body-cover"
+                  />
+                  <strong class="card__body-name">Today's Top Hits</strong>
+                  <p class="card__body-description">
+                    Steve Lacy is on top of the Hottest 50!
+                  </p>
+                </div>
+              </a>
+              <a href="#" class="card">
+                <div class="card__body">
+                  <img
+                    src="https://placekitten.com/300/300"
+                    alt="Playlist cover"
+                    class="card__body-cover"
+                  />
+                  <strong class="card__body-name">Today's Top Hits</strong>
+                  <p class="card__body-description">
+                    Steve Lacy is on top of the Hottest 50!
+                  </p>
+                </div>
+              </a>
+              <a href="#" class="card">
+                <div class="card__body">
+                  <img
+                    src="https://placekitten.com/300/300"
+                    alt="Playlist cover"
+                    class="card__body-cover"
+                  />
+                  <strong class="card__body-name">Today's Top Hits</strong>
+                  <p class="card__body-description">
+                    Steve Lacy is on top of the Hottest 50!
+                  </p>
+                </div>
+              </a>
+              <a href="#" class="card">
+                <div class="card__body">
+                  <img
+                    src="https://placekitten.com/300/300"
+                    alt="Playlist cover"
+                    class="card__body-cover"
+                  />
+                  <strong class="card__body-name">Today's Top Hits</strong>
+                  <p class="card__body-description">
+                    Steve Lacy is on top of the Hottest 50!
+                  </p>
+                </div>
+              </a>
+              <a href="#" class="card">
+                <div class="card__body">
+                  <img
+                    src="https://placekitten.com/300/300"
+                    alt="Playlist cover"
+                    class="card__body-cover"
+                  />
+                  <strong class="card__body-name">Today's Top Hits</strong>
+                  <p class="card__body-description">
+                    Steve Lacy is on top of the Hottest 50!
+                  </p>
+                </div>
+              </a>
+            </div>
+          </section>
+          <section class="playlist-section">
+            <header class="playlist-section__header">
+              <h1 class="title">Spotify Playlists</h1>
+              <a href="#" class="link">See All</a>
+            </header>
+            <div class="playlist-section__body">
+              <a href="#" class="card">
+                <div class="card__body">
+                  <img
+                    src="https://placekitten.com/300/300"
+                    alt="Playlist cover"
+                    class="card__body-cover"
+                  />
+                  <strong class="card__body-name">Today's Top Hits</strong>
+                  <p class="card__body-description">
+                    Steve Lacy is on top of the Hottest 50!
+                  </p>
+                </div>
+              </a>
+              <a href="#" class="card">
+                <div class="card__body">
+                  <img
+                    src="https://placekitten.com/300/300"
+                    alt="Playlist cover"
+                    class="card__body-cover"
+                  />
+                  <strong class="card__body-name">Today's Top Hits</strong>
+                  <p class="card__body-description">
+                    Steve Lacy is on top of the Hottest 50!
+                  </p>
+                </div>
+              </a>
+              <a href="#" class="card">
+                <div class="card__body">
+                  <img
+                    src="https://placekitten.com/300/300"
+                    alt="Playlist cover"
+                    class="card__body-cover"
+                  />
+                  <strong class="card__body-name">Today's Top Hits</strong>
+                  <p class="card__body-description">
+                    Steve Lacy is on top of the Hottest 50!
+                  </p>
+                </div>
+              </a>
+              <a href="#" class="card">
+                <div class="card__body">
+                  <img
+                    src="https://placekitten.com/300/300"
+                    alt="Playlist cover"
+                    class="card__body-cover"
+                  />
+                  <strong class="card__body-name">Today's Top Hits</strong>
+                  <p class="card__body-description">
+                    Steve Lacy is on top of the Hottest 50!
+                  </p>
+                </div>
+              </a>
+              <a href="#" class="card">
+                <div class="card__body">
+                  <img
+                    src="https://placekitten.com/300/300"
+                    alt="Playlist cover"
+                    class="card__body-cover"
+                  />
+                  <strong class="card__body-name">Today's Top Hits</strong>
+                  <p class="card__body-description">
+                    Steve Lacy is on top of the Hottest 50!
+                  </p>
+                </div>
+              </a>
+              <a href="#" class="card">
+                <div class="card__body">
+                  <img
+                    src="https://placekitten.com/300/300"
+                    alt="Playlist cover"
+                    class="card__body-cover"
+                  />
+                  <strong class="card__body-name">Today's Top Hits</strong>
+                  <p class="card__body-description">
+                    Steve Lacy is on top of the Hottest 50!
+                  </p>
+                </div>
+              </a>
+            </div>
+          </section>
+        </div>
       </main>
       <footer class="footer"></footer>
     </div>
