finish signup page

--- a/src/index.html
+++ b/src/index.html
@@ -101,7 +101,7 @@
               <a href="./singup.html" class="primary-link primary-link--blank"
                 >Sign up</a
               >
-              <a href="#" class="primary-link">Log in</a>
+              <a href="./formulario.html" class="primary-link">Log in</a>
             </div>
           </div>
         </header>
