--- a/src/formulario.html
+++ b/src/formulario.html
@@ -52,12 +52,7 @@
           </button>
         </a>
       
-        <!-- verificar linha -->
-        <div class="mb-2 d-flex">
-          <div class="linha"></div>
-          <span id="ou">ou</span>
-          <div class="linha"></div>
-        </div>
+        <span class="or-text">or</span>
         
         <form>
           <div class="form-group mb-1">
