--- a/src/formulario.html
+++ b/src/formulario.html
@@ -52,7 +52,8 @@
           </button>
         </a>
       
-        <span class="or-text">or</span>
+        <!-- verificar linha -->
+        <span class="or-text">ou</span>
         
         <form>
           <div class="form-group mb-1">
