--- a/src/formulario.html
+++ b/src/formulario.html
@@ -18,7 +18,7 @@
     <title>Cadastro</title>
 
 </head>
-<body class="my-5">
+<body >
 
   <main class="container p-4 justify-content-center" id="form">
 
