--- a/src/index.html
+++ b/src/index.html
@@ -106,92 +106,63 @@
           </div>
         </header>
         <div class="body-root">
-          <section class="playlist-section">
-            <header class="playlist-section__header">
-              <h1 class="title">Spotify Playlists</h1>
-              <a href="#" class="link">See All</a>
-            </header>
-            <div class="playlist-section__body">
-              <a href="#" class="card">
-                <div class="card__body">
+          <table>
+            <tr>
+              <td>
+                <div class="playlist">
                   <img
-                    src="https://placekitten.com/300/300"
-                    alt="Playlist cover"
-                    class="card__body-cover"
+                    src="https://placekitten.com/100/100"
+                    alt="primeira playlist foto"
                   />
-                  <strong class="card__body-name">Today's Top Hits</strong>
-                  <p class="card__body-description">
-                    Steve Lacy is on top of the Hottest 50!
-                  </p>
+                  <strong>My playlist #1</strong>
                 </div>
-              </a>
-              <a href="#" class="card">
-                <div class="card__body">
+              </td>
+              <td>
+                <div class="playlist">
                   <img
-                    src="https://placekitten.com/300/300"
-                    alt="Playlist cover"
-                    class="card__body-cover"
+                    src="https://placekitten.com/100/100"
+                    alt="capa segunda playlist"
                   />
-                  <strong class="card__body-name">Today's Top Hits</strong>
-                  <p class="card__body-description">
-                    Steve Lacy is on top of the Hottest 50!
-                  </p>
+                  <strong>My playlist #2</strong>
                 </div>
-              </a>
-              <a href="#" class="card">
-                <div class="card__body">
+              </td>
+              <td>
+                <div class="playlist">
                   <img
-                    src="https://placekitten.com/300/300"
-                    alt="Playlist cover"
-                    class="card__body-cover"
+                    src="https://placekitten.com/100/100"
+                    alt="capa terceira playlist"
                   />
-                  <strong class="card__body-name">Today's Top Hits</strong>
-                  <p class="card__body-description">
-                    Steve Lacy is on top of the Hottest 50!
-                  </p>
+                  <strong>My playlist #3</strong>
                 </div>
-              </a>
-              <a href="#" class="card">
-                <div class="card__body">
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <div class="playlist">
                   <img
-                    src="https://placekitten.com/300/300"
-                    alt="Playlist cover"
-                    class="card__body-cover"
+                    src="https://placekitten.com/100/100"
+                    alt="quarta capa"
                   />
-                  <strong class="card__body-name">Today's Top Hits</strong>
-                  <p class="card__body-description">
-                    Steve Lacy is on top of the Hottest 50!
-                  </p>
+                  <strong>My playlist #4</strong>
                 </div>
-              </a>
-              <a href="#" class="card">
-                <div class="card__body">
+              </td>
+              <td>
+                <div class="playlist">
                   <img
-                    src="https://placekitten.com/300/300"
-                    alt="Playlist cover"
-                    class="card__body-cover"
+                    src="https://placekitten.com/100/100"
+                    alt="quinta capa"
                   />
-                  <strong class="card__body-name">Today's Top Hits</strong>
-                  <p class="card__body-description">
-                    Steve Lacy is on top of the Hottest 50!
-                  </p>
+                  <strong>My playlist #5</strong>
                 </div>
-              </a>
-              <a href="#" class="card">
-                <div class="card__body">
-                  <img
-                    src="https://placekitten.com/300/300"
-                    alt="Playlist cover"
-                    class="card__body-cover"
-                  />
-                  <strong class="card__body-name">Today's Top Hits</strong>
-                  <p class="card__body-description">
-                    Steve Lacy is on top of the Hottest 50!
-                  </p>
+              </td>
+              <td>
+                <div class="playlist">
+                  <img src="https://placekitten.com/100/100" alt="sexta capa" />
+                  <strong>My playlist #6</strong>
                 </div>
-              </a>
-            </div>
-          </section>
+              </td>
+            </tr>
+          </table>
           <section class="playlist-section">
             <header class="playlist-section__header">
               <h1 class="title">Spotify Playlists</h1>
